syntax = "proto3";

package information;

import "google/protobuf/struct.proto";

option go_package = "./proto;information";

service Information {
	rpc TransactionInformation(TransactionInformationRequest) returns (TransactionInformationResponse) {}

}

message TransactionInformationRequest {
	string network = 1;
	string tx_hash = 2;
	string address = 3;
	string currency = 4;
}

message TransactionInformationResponse {
	string address = 1;
	Transaction transaction = 2;
	repeated Log logs = 3;
	repeated Event events = 4;
	Value value = 5;
	string network = 6;
}

message Transaction {
	TransactionData raw_data = 1;
	TransactionInformation information = 2;
}

message TransactionData {
	string tx_hash = 1;
	uint64 block = 2;
	string from = 3;
	string to = 4;
    string value = 5;
	string input = 6;
	bool status = 7;
	uint64 timestamp = 8;
}

message TransactionInformation {
    string method = 1;
    string method_full = 2;
	repeated Parameter parameters = 3;
}

message Log {
	LogData raw_data = 1;
	LogInformation information = 2;
}

message LogData {
	string tx_hash = 1;
	string contract = 2;
	int32 index = 3;
	string data = 4;
	repeated string topics = 5;
}

message LogInformation {
    string name = 1;
	repeated Parameter parameters = 2;
}

message Parameter {
    string name = 1;
    string value = 2;
}

message Event {
	int32 priority = 1;
	string name = 2;
	EventValue value = 3;
	google.protobuf.Struct additional_info = 4;
}

message EventValue {
	string amount = 1;
	string token = 2;
}

message Value {
	float amount = 1;
	string currency = 2;
	google.protobuf.Struct additional_info = 3;
}
